Issue #3205399 by mhawwari: Fix input width inside tables on mobile

--- a/scss/vartheme-claro.theme.style.scss
+++ b/scss/vartheme-claro.theme.style.scss
@@ -231,3 +231,11 @@ fieldset {
     width: 35%;
   }
 }
+
+// Fix styling of form elements in tables on mobile.
+td > .form-item > .form-element,
+td > .ajax-new-content > .form-item > .form-element {
+  @media screen and (max-width: 37.5rem) {
+    width: inherit;
+  }
+}
